# amounttime

./: README.rst  amounttime.py  evalrepr.py  gensample.py  measure.sh  pyproject.toml  sample.xml  tests.py
